--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,4 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+Housemates/.DS_Store
